test integration with angular 4

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<title>MINI POP</title>
-		<link type="text/css" rel="stylesheet" href="/webjars/bootstrap/4.0.0-alpha.6-1/css/bootstrap.min.css">
-	</head>
-	<body>
-	Spring Boot View Test
-	</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>NgNewWelcomeMsgApp</title><base href="/"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/x-icon" href="favicon.ico"><link href="styles.d41d8cd98f00b204e980.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><script type="text/javascript" src="inline.4751ba15ee29e90d2701.bundle.js"></script><script type="text/javascript" src="polyfills.f77454f386e1728adda2.bundle.js"></script><script type="text/javascript" src="vendor.f19c051c868220adf549.bundle.js"></script><script type="text/javascript" src="main.50484a01b0e4be6306ef.bundle.js"></script></body></html>
